- Improved smbios support for some Intel Xeon models
- BETA : Sync'd ati engine with the trunk

- Small security fix
- Added a mechanism to strip the madt table
- Ported the serial number randomizer to smbiosgetters,
 Warning: smbiosgetters (and also the Gui module) still don't work when built with Xcode4.

- Implemented a serial number randomizer in smbiospatcher 
(can be useful for icloud registration problems, especially when the serial number is already used by another machine, 

DISCLAIMER: Please read the iCloud License (http://www.apple.com/legal/icloud/ww/) carefully before using this option.
By using this option, you are agreeing to be bound by
the terms of the iCloud License (http://www.apple.com/legal/icloud/ww/). If you do not or cannot agree to the terms
of the icloud License (http://www.apple.com/legal/icloud/ww/), please do not use this option.

THE CHAMELEON ( OR VOODOO ) TEAM CAN NOT BE HELD RESPONSIBLE FOR ANY ABUSE.)

- Chameleon (or at least this branch) can now boot OSX on Parallels Desktop 7, with full acpi and smbios support 
  (note: you will need to embed at least acpicodec and smbiosgetters since virtual machines don't like our module system),
  see this vid ;-) : http://www.youtube.com/watch?v=kvSgwIE6D4o&feature=channel_video_title
- Added a mechanism to boot the real Lion installer partition (with baseSystem.dmg as root device), you will just need to edit the kernelcache
  for you platform, step 2 of the installation process (booting from the kernelcache in the "Mac OS X Install Data" folder) is still in progress

- Added a simple mechanism to embed a module into the core of the bootloader (useful for virtual machines 
  or for modules not yet compatible with xcode4), see internal_modules.h for more info.
- Added JrCs's Keylayout support in Keymapper
- Fixed an issue in AcpiCodec where the highest cpu frequency may not be added in the pstate package on some configurations 